--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "@wcz/test",
+  "name": "wcz-test",
+  "version": "1.9.0",
   "private": false,
   "sideEffects": false,
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start"
+    "prepublish": "tsup"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.114.29",
-    "@tanstack/react-start": "^1.114.30",
+    "@tanstack/react-router": "^1.116.0",
+    "@tanstack/react-router-devtools": "^1.116.0",
+    "@tanstack/react-start": "^1.116.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
+    "tailwind-merge": "^2.6.0",
     "vinxi": "0.5.3"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "tsup": "^8.4.0",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
   }
