--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "wcz-test",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "private": false,
   "sideEffects": false,
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vinxi dev",
     "prepublish": "tsup"
