--- a/package.json
+++ b/package.json
@@ -12,22 +12,44 @@
   ],
   "scripts": {
     "dev": "vinxi dev",
-    "prepublish": "tsup"
+    "prepublish": "tsup",
+    "npm-install": "npm install",
+    "npm-update": "npm update"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.116.0",
-    "@tanstack/react-start": "^1.116.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "vinxi": "0.5.3"
+    "i18next": "^25.0.0",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
+    "keycloak-js": "^26.1.5",
+    "react-i18next": "^15.4.1",
+    "use-local-storage-state": "^19.5.0",
+    "uuidv7": "^1.0.2",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "tailwindcss": "^3.4.17",
+    "axios": "1.x",
+    "dayjs": "1.x",
     "tsup": "^8.4.0",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "peerDependencies": {
+    "@emotion/react": "11.x",
+    "@emotion/styled": "11.x",
+    "@mui/icons-material": "7.x",
+    "@mui/material": "7.x",
+    "@mui/x-data-grid-premium": "7.x",
+    "@mui/x-date-pickers-pro": "7.x",
+    "@tanstack/react-form": "1.x",
+    "@tanstack/react-query": "5.x",
+    "@tanstack/react-router": "1.x",
+    "@tanstack/react-start": "1.x",
+    "react": "19.x",
+    "react-dom": "19.x",
+    "vinxi": "0.x",
+    "zod": "3.x"
   }
 }
