feat: upgrade version to 2.0.0 and add axios dependency
refactor: change interface declarations to export in form components

feat: add RouterError and RouterNotFound components for error handling

feat: implement RouterTab component for navigation

feat: create UserService for Keycloak authentication and user management

fix: update token handling in wczApiClient to use UserService

chore: add KeycloakSettings and User models for type safety

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wcz-test",
-  "version": "1.10.0",
+  "version": "2.0.0",
   "private": false,
   "sideEffects": false,
   "type": "module",
@@ -17,12 +17,13 @@
     "npm-update": "npm update"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "keycloak-js": "^26.1.5",
     "react-i18next": "^15.4.1",
-    "@toolpad/core": "^0.13.0",
+    "@toolpad/core": "0.13.0",
     "uuidv7": "^1.0.2",
     "zod-i18n-map": "^2.27.0"
   },
@@ -45,7 +46,6 @@
     "@tanstack/react-query": "5.x",
     "@tanstack/react-router": "1.x",
     "@tanstack/react-start": "1.x",
-    "axios": "1.x",
     "dayjs": "1.x",
     "react": "19.x",
     "react-dom": "19.x",
