--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next-http-backend": "^3.0.2",
     "keycloak-js": "^26.1.5",
     "react-i18next": "^15.4.1",
+    "react-number-format": "^5.4.4",
     "@toolpad/core": "0.13.0",
     "uuidv7": "^1.0.2",
     "zod-i18n-map": "^2.27.0"
